# haven

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  CODE_REVIEW.md  README.md  REFACTOR_NOTES.md  pyproject.toml  run.bat  run.ps1
agents/: asana.yaml  freshservice.yaml  gmail.yaml  jira.yaml  otter.yaml  slack.yaml
ground_rules/: ground_rules.md
haven/: __main__.py  backup.py  config.py  contacts.py  db.py  deps.py  dispatch.py  docingest.py  enrichment.py  eval.py  events.py  executor.py  filters.py  identity.py  knowledge.py  linear.py  llm.py  main.py  runtime.py  scoring.py  spine.py  store.py  wiki.py
haven/routers/: asana.py  command.py  contacts.py  dispatch.py  docs.py  evals.py  freshservice.py  gmail.py  identity.py  items.py  jira.py  knowledge.py  otter.py  slack.py  spine.py  system.py  wiki.py
haven/services/: gmail_actions.py  gmail_poll.py
haven/sources/: asana.py  freshservice.py  gcal.py  gmail.py  gmail_auth.py  jira.py  otter.py  slack.py
haven/web/static/: approvals.html  index.html
haven/web/static/mockups/: option-a.html  option-b.html  option-c.html
scripts/: resolve_linear_project.py
setup/: slack-app-manifest.yaml
tests/: test_asana.py  test_auth.py  test_command.py  test_contacts.py  test_context_pack.py  test_dispatch.py  test_docingest.py  test_enrichment.py  test_eval.py  test_eval_m1.py  test_filters.py  test_gcal.py  test_gmail_prune.py  test_identity.py  test_jira.py  test_knowledge.py  test_linear.py  test_llm.py  test_m0_safety.py  test_m4_trust.py  test_runtime.py  test_scoring.py  test_slack_dms.py  test_spine.py  test_wiki.py
