[project]
name = "haven"
version = "0.1.0"
description = "Real-time AR dashboard — orchestrator + per-source agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=24.1",
    # Gmail integration
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.149",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["haven*"]
